- renamed tpBatch to SpriteBatch - SpriteBatch can now be created with a normal sprite - SpriteBatch:sprite() can now accept texture coordinates (s, t, tw, th)

--- a/TPCodeaTabExample.codea/Info.plist
+++ b/TPCodeaTabExample.codea/Info.plist
@@ -7,7 +7,7 @@
 	<key>Buffer Order</key>
 	<array>
 		<string>Main</string>
-		<string>tpBatch</string>
+		<string>SpriteBatch</string>
 		<string>SmallWorldSprites</string>
 	</array>
 	<key>Created</key>
