--- a/TPCodeaChunkExample.codea/Info.plist
+++ b/TPCodeaChunkExample.codea/Info.plist
@@ -7,7 +7,7 @@
 	<key>Buffer Order</key>
 	<array>
 		<string>Main</string>
-		<string>tpBatch</string>
+		<string>SpriteBatch</string>
 		<string>pickle</string>
 	</array>
 	<key>Created</key>
